[package]
name = "tkio-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
pimoroni-pico-lipo-16mb = "0.2.0"

cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12.1"
asm-delay = "0.9.0"

# If using usb
#usb-device= "0.2.8"
#usbd-serial = "0.1.1"
#usbd-hid = "0.5.2"

panic-probe = { version = "0.3.0" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3